--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-$primary-color:#FF6060;
+$primary-color:#26175B;
 $secondary-color:#E3E3E3;
 
 * {
@@ -22,7 +22,7 @@ $secondary-color:#E3E3E3;
   .kasa-banner {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     margin-bottom: 30px;
   
     .kasa-logo {
@@ -57,7 +57,7 @@ $secondary-color:#E3E3E3;
     position: absolute;
     margin: 0;
     top: 30%;
-    left: 25%;
+    left: 10%;
     display: inline-block;
   }
   
@@ -106,10 +106,9 @@ $secondary-color:#E3E3E3;
   
       .card-title {
         position: absolute;
-        bottom: 0;
         left: 0;
         padding: 10px;
-        color: #fff;
+        color:#26175B;
         width: 100%;
         font-weight: normal;
       }
@@ -126,17 +125,21 @@ $secondary-color:#E3E3E3;
   
   /*Footer*/
   .kasa-footer {
-    background-color: black;
+    background-color:#C8C4D5;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 210px;
+    height: auto;
   
     .footer-copyrights{
+      margin-top:0;
       font-weight: 500;
       font-size: 24px;
+    }
+    .kasa-logo{
+      width:200px
     }
   }
   
@@ -181,7 +184,7 @@ $secondary-color:#E3E3E3;
   
     .collapse-content {
       background-color: #F6F6F6;
-      color: #FF6060;
+      color: $primary-color;
       font-size: 18px;
       padding: 10px 20px 10px 20px;
       border-radius: 5px;
@@ -192,6 +195,12 @@ $secondary-color:#E3E3E3;
       visibility: hidden;
       opacity: 0;
       height: 0;
+      .link-contact-info{
+        color:$primary-color;
+        :hover{
+          cursor: pointer;
+        }
+      }
     }
     
     .expanded {
@@ -272,7 +281,7 @@ $secondary-color:#E3E3E3;
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      color: white;
+      color:black;
     }
   
     .fa-chevron-right {
@@ -285,6 +294,7 @@ $secondary-color:#E3E3E3;
     }
   
     .slideshow-pagination {
+      display:hidden;
       font-size: 18px;
       position: absolute;
       top: 90%;
@@ -293,15 +303,16 @@ $secondary-color:#E3E3E3;
     }
   
     .slideshow-image-container {
-      height: 415px;
+      height: 1000px;
       position: relative;
       border-radius: 25px;
   
       .slideshow-image {
+        border-radius:25px;
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 20px;
       }
     }
@@ -400,11 +411,12 @@ $secondary-color:#E3E3E3;
   
   
   .card-details-description-equipements {
+    margin-top:30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   
-    .collapse:first-child, .collapsed:first-child{
+    .collapse:first-child, .collapsed:first-child, .collapse:nth-child(2),.collapsed:nth-child(2){
       margin-right:35px;
     }
     .collapse-header h2{
